--- a/src/package.json
+++ b/src/package.json
@@ -1,9 +1,10 @@
 {
   "name": "src",
-  "version": "0.8.4",
+  "version": "0.9.0",
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
